Thu Apr 11 21:30:23 1996  Theodore Y. Ts'o  <tytso@dcl>

	* get_in_tkt.c (stash_as_reply, verify_as_reply): Move time offset
		code from stash_as_reply to verify_as_reply, and fix it so
		that it actually works.

Wed Apr  3 16:04:36 1996  Theodore Y. Ts'o  <tytso@dcl>

	* rd_req_dec.c (krb5_rd_req_decoded): Move code which
	        validated the ticket times to krb5_validate_times.

	* valid_times.c (krb5_validate_times): New function which
		determines whether or not the ticket times are valid.

	* mk_req_ext.c (krb5_mk_req_extended): Call krb5_validate_time()
		to determine whether or not the ticket in passed-in
		credentials is valid.  If it isn't, return an error right
		away. 

Wed Mar 27 17:05:47 1996  Richard Basch  <basch@lehman.com>

	* in_tkt_ktb.c (keytab_keyproc): Do not check to see that the
	enctype of the key is identical; there are several equivalent
	DES enctypes.

	* in_tkt_ktb.c (krb5_get_in_tkt_with_keytab): Removed the fancy
	logic to only request the keytypes that correspond to those in
	the keytab.  There were too many fencepost conditions that could
	get you into trouble.  Either it should be there and *fully*
	functional, or not in there at all.  Besides, there are too many
	other components in Kerberos that expect the end-service to know
	all its keys that this sanity check is overkill.

Tue Mar 26 14:45:03 1996  Richard Basch  <basch@lehman.com>

	* conv_princ.c: added "imap" service to the conversion list as
	requiring domain conversion for the instance.  (imap/<host> is used
	by some of the new imap mail implementations)

Sun Mar 24 01:34:14 1996  Sam Hartman  <hartmans@tertius.mit.edu>

	* send_tgs.c (krb5_send_tgs_basic): You want to setup the eblock
 	used for the authenticator using the in_cred->keyblock, *not*
 	request.ticket.enc_part.enctype.  Under a multi-enctype system,
 	the session key may be different from the ticket key.

Wed Mar 20 23:00:59 1996  Theodore Y. Ts'o  <tytso@dcl>
